# PDFtoMD

./: .env.example  .gitignore  PDFtoMD.md  README.md  README_ZH.md  pyproject.toml
example/: Attention is All you Need.md
packaging/: pyinstaller.spec
pdftomd/: __init__.py  app.py  config.py  errors.py  logging.py  models.py
pdftomd/converter/: __init__.py  filename.py  markdown_writer.py  marker_converter.py  marker_process.py  title_extractor.py
pdftomd/gui/: main_window.py  styles.py  widgets.py  worker.py
tests/: test_filename.py  test_gui.py  test_markdown_writer.py  test_marker_converter.py  test_marker_process.py  test_title_extractor.py  test_worker.py
